--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,6 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";
 
-body {
+html, body {
 	margin: auto;
 	font-family: "Roboto";
 	background-color: darkgray;
@@ -8,4 +8,8 @@ body {
 
 .center-text {
 	text-align: center;
+}
+
+.bold-text {
+	font-weight: bold;
 }
